#1 - Initial IMAP implementation

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -6,6 +6,9 @@ server:
     domain: "localhost"
     username: ""
     password: ""
+  imap:
+    port: ":1143"
+    hostname: "localhost"
 database:
   driver: "sqlite3"
   url: "./email.db"
