--- a/config.yml.sample
+++ b/config.yml.sample
@@ -10,7 +10,7 @@ server:
     port: ":1143"
     hostname: "localhost"
 database:
-  url: "postgres://mercury:mercury@localhost:5432/mercury?sslmode=disable"
+  url: "postgres://inbox:inbox@localhost:5432/inbox451?sslmode=disable"
   max_open_conns: 25
   max_idle_conns: 5
   conn_max_lifetime: 5m
