--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: mercury
-      POSTGRES_PASSWORD: mercury
-      POSTGRES_DB: mercury
+      POSTGRES_USER: inbox
+      POSTGRES_PASSWORD: inbox
+      POSTGRES_DB: inbox451
     ports:
       - "5432:5432"
     volumes:
