--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@ go.work
 
 # Environment variables
 .env
+
+# Ignore config files
+config.yml
+config.yaml
+
+# Ignore all files in the /tmp directory
+/tmp
