--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,19 @@
 services:
-  db:
+  postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: mercury
-      POSTGRES_PASSWORD: mercury
-      POSTGRES_DB: mercury
+      POSTGRES_USER: inbox
+      POSTGRES_PASSWORD: inbox
+      POSTGRES_DB: inbox451
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U mercury"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
