chore(#20): package is now named inbox451 (#21)
* chore(#20): package is now named inbox451

* chore(#20) updating route path on bruno requests

* chore(#20) implementing missing endpoints: tokens

* preparing for merging joão changes

* chore(#20) - Updated tokens

* chore(#20) Add token routes

* chore(#20) made paramenters name more consistent

* chore(#20) Review users in repository and queries

* chore(#20) Fixed typos in core/users

* chore(#20) Created users api handlers

* chore: add missing bruno requests and user routes

* Fix typo in parameter name for deleteUser function

* Refactor token creation to include name and expiration date

* bug: fix go lint issue

* Refactor token creation to include name and expiration date

* chore(#20) Added user routes

* chore(#20) Splited repository in multiple files

* chore(#20) Fetching projects that bellong to a user

* chore(#20) Added queries for project_users

* chore(#20) Added ability to add users to projects

* chore(#20) Fixed queries

* chore(#20) Fixing Bruno requests

* chore(#20) User mapping

* chore(#20) Fixed golangci-lint issues

* chore: Add endpoint to retrieve a specific message

* chore: refactor bruno requests and add missing ones

* chore: Refactor README.md

---------

Co-authored-by: Joao Almeida <jcfd.almeida@campus.fct.unl.pt>

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ config.yaml
 
 # Ignore all files in the /tmp directory
 /tmp
+
+# Go release distribution and binaries
+inbox451
+install
+uninstall
+/dist
