Chore: Add Docker Support (#19)
* #10 Added pgweb as the postgres web gui

* #10 Replacing pgweb for pgadmin

* Using chainguard:wolfi-base as base for Dockerimage

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ config.yaml
 # Ignore all files in the /tmp directory
 /tmp
 
-# Go release distribution and binaries
+# Ignore inbox451 excutable, distribution and binaries
 inbox451
 install
 uninstall
