--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -51,6 +51,18 @@ dockers:
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
       - "--label=org.opencontainers.image.version={{.Version}}"
 
+  - image_templates:
+      - "ghcr.io/inbox451/inbox451:{{ .Version }}-arm64v8"
+      - "ghcr.io/inbox451/inbox451:latest-arm64v8"
+    dockerfile: Dockerfile
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+
 docker_manifests:
   - name_template: ghcr.io/inbox451/inbox451:{{ .Version }}
     image_templates:
