--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -47,7 +47,7 @@ jobs:
         run: make build
 
       - name: Run tests
-        run: go test -coverprofile=coverage.txt
+        run: make test-coverage
 
       - uses: codecov/codecov-action@v5
         with:
