--- a/codecov.yml
+++ b/codecov.yml
@@ -20,5 +20,5 @@ comment:
   hide_project_coverage: false
 
 ignore:
-  - "internal/mocks/**/*" # Mocks
+  - "**/*_mock.go" # Mock files
   - "**/*.pb.go" # Generated protobuf files
